      installed already, ala Gradle's gradlew script.
    * The default location for tools is in ~/.please instead of /opt/please,
      which again makes it easier for people who don't have the tools already.
    * --max_flakes flag has been removed in favour of --num_runs always making
      a test run exactly that many times. Hopefully this is less confusing.


Version 1.5.12
--------------

    * Altered exclusion rules for java_binary / java_test to better support native libraries.


Version 1.5.11
--------------

    * Write explicit failures into unit test output on timeout etc. Needed for some downstream
      tools that don't check attributes like 'failures' and need explicit entries.


Version 1.5.10
--------------

    * Fix for multiple caches which could sometimes panic with a negative waitgroup.


Version 1.5.9
-------------

    * grpc_library now correctly honours the 'languages' argument.


Version 1.5.8
-------------

    * Various fixes to RPC cache. Use base64 URL encoding and short hashes.


Version 1.5.7
-------------

    * Adds `go generate` support. You can now call it by adding `go_tools` to your go_library.


Version 1.5.6
-------------

    * Fix bug where golang tests pass if they panic since the exit code was being ignored
      after piping the command to tee.
    * 'plz query completions' now treats \: as equivalent to : to work around #18.


Version 1.5.5
-------------

    * Another similar fix for ForkExec call to cache_cleaner.


Version 1.5.4
-------------

    * Fix to cache_cleaner which wasn't always cleaning correctly.


Version 1.5.3
-------------

    * Fix tarballs to be consistent about /opt/please/please_go_test.


Version 1.5.2
-------------

    * Fix incorrect warning on tools that have multiple outputs.


Version 1.5.1
-------------

    * Fixed a bug where importing of libraries in test main files could be indeterminate
      if you had multiple libraries of the same name in different subdirectories.

